@@ -40,6 +40,7 @@ MakeGenerator.unsupportedConfig=Warning: unsupported configuration {0}
 MakeGenerator.success=[Operation successful]
 MakeGenerator.didnt.generate=No Makefile generated
 MakeGenerator.refresh.MakeTargets=Refreshing Make Targets
+MakeGenerator.commandline.envvars=Command-line environment variables:
 
 BuildDir.apply=Build directory already in use
 BuildDir.default=Default build directory to unused value?
